# KrKr2-Next

./: .gitignore  vcpkg.json
apps/flutter_app/: pubspec.yaml
apps/flutter_app/android/app/: build.gradle.kts
apps/flutter_app/android/app/src/main/: AndroidManifest.xml
apps/flutter_app/lib/l10n/: app_localizations.dart
apps/flutter_app/lib/pages/: game_page.dart  home_page.dart
bridge/engine_api/: CMakeLists.txt
bridge/flutter_engine_bridge/ios/: flutter_engine_bridge.podspec
cpp/core/: CMakeLists.txt
cpp/core/base/: 7zArchive.cpp  CMakeLists.txt  MaitetsuCxDecryption.cpp  MaitetsuCxDecryption.h  XP3Archive.cpp
cpp/core/base/impl/: SysInitImpl.cpp
cpp/core/environ/: CMakeLists.txt  XP3ArchiveRepack.cpp
cpp/core/sound/win32/: tvpsnd.cpp
cpp/core/tjs2/: CMakeLists.txt  tjsUtils.cpp
cpp/core/tjs2/bison/: tjs.y  tjsdate.y  tjspp.y
cpp/core/visual/impl/: DInputMgn.cpp
cpp/core/visual/ogl/: RenderManager_ogl.cpp
cpp/plugins/: CMakeLists.txt  krkrlive2d_stub.cpp
cpp/plugins/kagparserex/: CMakeLists.txt
cpp/plugins/psbfile/: CMakeLists.txt
vcpkg/ports/7zip/: CMakeLists.txt
vcpkg/ports/glib/: disable-gdb-install.patch  portfile.cmake
vcpkg/triplets/: arm64-android.cmake  arm64-ios.cmake
